<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_item_city_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_city_default_name"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_city_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_city_default_lat"
            android:textColor="@color/purple"/>
        <Space
            android:layout_width="@dimen/spacer_inner"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_item_city_lon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_city_default_lon"
            android:textColor="@color/purple"/>
    </LinearLayout>

</LinearLayout>