<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context=".activities.RoadTripActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main_geektrotters"
        android:textSize="@dimen/title_size"
        android:textStyle="bold|italic"
        android:textColor="@color/pink"
        android:fontFamily="cursive"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_roadtrips"
        android:textSize="@dimen/title_size"
        android:textStyle="italic"
        android:textColor="@color/yellow"
        android:fontFamily="cursive"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/spacer_rt_btns"
        android:layout_marginHorizontal="@dimen/spacer_inner">
        <Button
            android:id="@+id/btn_rt_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_rt_btn_new"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:backgroundTint="@color/pink"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacer_fab"/>
        <Button
            android:id="@+id/btn_rt_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_rt_btn_list"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:backgroundTint="@color/pink"/>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv_rt_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>